--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,6 +65,7 @@ flutter:
     - photo/kickoff.jpg
     - photo/wavinghand.jpg
     - photo/boyemoji.jpg
+    - photo/personal.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
